cleanup: remove unused fields and variables javadoc and others